[tool.poetry]
name = "svt"
version = "0.1.0"
description = "A Python implementation of the Singular Value Thresholding algorithm"
authors = ["mukappalambda <maokailan24@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mukappalambda/singular-value-thresholding"

[tool.poetry.scripts]
svt-cli = "svt.cli:app"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = [
    {version = ">=1.24", python = ">=3.9,<3.12"},
    {version = ">=1.26", python = ">=3.12,<3.13"},
]
scipy = [
    {version = ">=1.10", python = ">=3.9,<3.12"},
    {version = ">=1.12", python = ">=3.12,<3.13"},
]
pillow = "^10.3.0"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
