[project]
name = "svt"
version = "0.1.0"
description = "A Python implementation of the Singular Value Thresholding algorithm"
authors = [
	{name = "mukappalambda",email = "maokailan24@gmail.com"}
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mukappalambda/singular-value-thresholding"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy (>=1.24)",
    "scipy (>=1.10)",
    "pillow (>=10.3.0)",
    "typer (>=0.12.5)"
]

[project.scripts]
svt-cli = "svt.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
